<resources>
    <string name="app_name">SMART App</string>
    <string name="smart_app">SMART App</string>
    <string name="smart_app_bangla">স্মার্ট এপ</string>
    <string name="english">English</string>
    <string name="register">Sign Up</string>
    <string name="register_bangla">সাইন আপ</string>
    <string name="login">Log In</string>
    <string name="login_bangla">লগ ইন</string>
    <string name="menu_name">Menu Name</string>
    <string name="organization">Organization</string>
    <string name="era_infotech_ltd">Powered by- ERA-InfoTech Ltd</string>
    <string name="era_infotech_ltd_bangla">Powered by- ERA-InfoTech Ltd</string>
    <string name="blogspot">Blogspot</string>
    <string name="facebook">Facebook</string>
    <string name="address">Address</string>
    <string name="email_id">Email</string>
    <string name="occupation">Occupation</string>
    <string name="mobile_no">Mobile No</string>
    <string name="developer_information">About Me</string>
    <string name="colon">:</string>
    <string name="select_type">Bill Type</string>
    <string name="select_bus_type">Bus Ticket Type</string>
    <string name="customer_code">Customer Code</string>
    <string name="sms_ac_bill_no">SMS Bill Account Number</string>
    <string name="sms_ac_bill_no_bangla">এসএমএস বিল একাউন্ট নম্বর</string>
    <string name="meter_no">Meter No</string>
    <string name="meter_no_bangla">মিটার নং</string>
    <string name="amount">Amount</string>
    <string name="proceed">Proceed</string>
    <string name="select_month">Select Month</string>
    <string name="select_year">Select Year</string>
    <string name="select_month_bangla">সিলেক্ট মান্থ</string>
    <string name="select_year_bangla">সিলেক্ট ইয়ার</string>
    <string name="validate">Validate</string>
    <string name="validate_bangla">ভ্যালিডেট</string>
    <string name="btn_serach">Search</string>
    <string name="to_date">To Date</string>
    <string name="from_date">From Date</string>
    <string name="or">OR</string>
    <string name="last_month">Last Month</string>
    <string name="last_week">Last Week</string>
    <string name="today">Today</string>
    <string name="date">Date</string>
    <string name="trn_no">Tran No</string>
    <string name="bill_type">Bill Type</string>
    <string name="bill_type_bangla">বিল টাইপ</string>
    <string name="quantity">Amount</string>
    <string name="queue_id">Queue ID</string>
    <string name="app_slogan">Welcome to Dynamic Utility Bill Collection</string>
    <string name="invoice_no">Invoice No</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="policy_number">Policy Number</string>
    <string name="policy_owner">Policy Owner\'s Name</string>
    <string name="select_purpose">Select Purpose</string>
    <string name="customer_id">Customer ID</string>
    <string name="about_me">About Me</string>
    <string name="internet_bill_payment">Internet Bill Payment</string>
    <string name="internet_bill_payment_bangla">ইন্টারনেট বিল পরিশোধ</string>
    <string name="insurance_bill_payment">Insurance Payment</string>
    <string name="select_insurance">Select Insurance Company</string>
    <string name="insurance_company">Insurance Company</string>
    <string name="insurance_company_bangla">ইন্সুরেন্স কোম্পানি</string>
    <string name="search_insurance">Search Insurance Company</string>
    <string name="insurance_bill_payment_bangla">বীমা পরিশোধ</string>
    <string name="utility_bill_dashboard">Utility Bill Dashboard</string>
    <string name="utility">Utility</string>
    <string name="utility_bill_dashboard_bangla">ইউটিলিটি বিল ড্যাশবোর্ড</string>
    <string name="water_bill_payment_bangla">পানির বিল পরিশোধ</string>
    <string name="water_bill_payment">Water Bill Payment</string>
    <string name="electricity_bill_payment">Electricity Bill Payment</string>
    <string name="school_bill_payment">School Fee Payment</string>
    <string name="college_bill_payment">College Fee Payment</string>
    <string name="university_bill_payment">University Fee Payment</string>
    <string name="electricity_bill_payment_bangla">বিদ্যুৎ বিল পরিশোধ</string>
    <string name="university_fee_payment_bangla">বিশ্ববিদ্যালয় বিল পরিশোধ</string>
    <string name="entertainment_bill_payment">Entertainment Bill Payment</string>
    <string name="entertainment_bill_payment_bangla">বিনোদন বিল পরিশোধ</string>
    <string name="bills_report">Utility Bills Report</string>
    <string name="ins_bills_report">Insurance Payment Report</string>
    <string name="qr_trans_history">QR Transaction History</string>
    <string name="bus_ticket_history">Bus Ticket History</string>
    <string name="qr_trans_history_bangla">QR Transaction History</string>
    <string name="bills_report_bangla">বিল রিপোর্ট</string>
    <string name="education_bills_report">Tuition Fee Report</string>
    <string name="education_bills_report_bangla">টিউশন ফী রিপোর্ট</string>
    <string name="gas_bill_payment">Gas Bill Payment</string>
    <string name="gas_bill_payment_bangla">গ্যাস বিল পরিশোধ</string>
    <string name="topup">Mobile Recharge</string>
    <string name="topup_bangla">মোবাইল রিচার্জ</string>
    <string name="ivac_bill_payment">IVAC Bill Payment</string>
    <string name="my_profile">My Profile</string>
    <string name="complain">Complain</string>
    <string name="customer_service">Customer Service</string>
    <string name="user_id_change">User ID Change</string>
    <string name="activity_log">Activity Log</string>
    <string name="password_change">Password Change</string>
    <string name="password_change_bangla">পাসওয়ার্ড পরিবর্তন</string>
    <string name="re_registration">Device Registration</string>
    <string name="wallet_fund_transfer">Wallet Transfer</string>
    <string name="payoeer_payment_history">Payoneer Payment History</string>
    <string name="wallet_fund_transfer_bangla">ওয়ালেট ফান্ড ট্রান্সফার</string>
    <string name="wallet_add_beneficiary">Wallet Add Beneficiary</string>
    <string name="wallet_add_beneficiary_bangla">ওয়ালেট অ্যাড বেনিফিশিয়ারি</string>
    <string name="stop_cheque">Stop Cheque</string>
    <string name="stop_cheque_bangla">স্টপ চেক</string>
    <string name="cheque_status">Cheque Status</string>
    <string name="cheque_status_bangla">চেক স্টেটাস</string>
    <string name="cheque_book_request">Cheque Book Request</string>
    <string name="primary_ac_set">Primary Account Set</string>
    <string name="source_ac_add">Source A/C Add</string>
    <string name="primary_ac_set_bangla">প্রাইমারি একাউন্ট সেট</string>
    <string name="register_touch_id">Register Touch ID</string>
    <string name="register_touch_id_bangla">রেজিস্টার টাচ আইডি</string>
    <string name="cheque_book_request_bangla">চেক বুক অনুরোধ</string>
    <string name="positive_pay">Positive Pay</string>
    <string name="positive_pay_bangla">পজিটিভ পে</string>
    <string name="static_qr_generate">Static QR Generate</string>
    <string name="static_qr_generate_bangla">জেনারেট স্ট্যাটিক কিউআর</string>
    <string name="static_qr_bangla">স্ট্যাটিক কিউআর</string>
    <string name="view_card">View Card</string>
    <string name="view_card_bangla">কার্ড দেখুন</string>
    <string name="dynamic_qr_generate">Dynamic QR Generate</string>
    <string name="dynamic_qr_generate_bangla">জেনারেট ডাইনামিক কিউআর</string>
    <string name="dynamic_qr_bangla">ডাইনামিক কিউআর</string>
    <string name="add_card">Add Card</string>
    <string name="add_card_link"><u>Add Card</u></string>
    <string name="add_card_bangla">কার্ড যোগ করুন</string>
    <string name="own_qr_transfer">Own Bank Fund Transfer (QR)</string>
    <string name="qr_cash_withdrawal">QR Cash Withdrawal</string>
    <string name="own_qr_transfer_bangla">নিজস্ব ব্যাংক ফান্ড ট্রান্সফার (কিউআর)</string>
    <string name="mm_qr_transfer">Cashout From MM Point</string>
    <string name="mm_qr_transfer_bangla">এমএম পয়েন্ট থেকে ক্যাশ আউট</string>
    <string name="ssl_qr_payment">SSL QR Payment</string>
    <string name="bangla_qr_payment">Bangla QR Payment</string>
    <string name="bangla_qr_payment_bangla">বাংলা কিউআর পেমেন্ট</string>
    <string name="visa_qr_payment">Visa QR Payment</string>
    <string name="visa_qr_payment_bangla">ভিসা কিউআর পেমেন্ট</string>
    <string name="add_beneficiary">Add Beneficiary</string>
    <string name="other_add_beneficiary">Add Beneficiary (Other Bank )</string>
    <string name="other_add_beneficiary_bangla">অ্যাড বেনিফিশিয়ারি (অন্য ব্যাংক )</string>
    <string name="standing_ins">Standing Instructions</string>
    <string name="standing_ins_change">Change Standing Instructions</string>
    <string name="own_bank_transfer">Own Bank Transfer</string>
    <string name="own_bank_transfer_bangla">নিজ ব্যাংক ট্রান্সফার</string>
    <string name="own_bank_add_beneficiary">Add Beneficiary (Own Bank)</string>
    <string name="own_bank_add_beneficiary_bangla">অ্যাড বেনিফিশিয়ারি (নিজ ব্যাংক)</string>
    <string name="own_bank">Own Bank</string>
    <string name="own_bank_bangla">নিজস্ব ব্যাংক</string>
    <string name="other_bank_transfer">Other Bank Transfer</string>
    <string name="other_bank_transfer_bangla">অন্য ব্যাংক ট্রান্সফার</string>
    <string name="own_bank_card_payment">Credit Card Bill Payment</string>
    <string name="own_bank_card_payment_bangla">ক্রেডিট কার্ড বিল পেমেন্ট</string>
    <string name="credit_card_transfer">Fund Transfer from Credit Card</string>
    <string name="credit_card_transfer_bangla">ফান্ড ট্রান্সফার ক্রেডিট কার্ড</string>
    <string name="credit_card_registration">Credit Card Registration</string>
    <string name="other_bank">Other Bank</string>
    <string name="other_bank_bangal">অন্য ব্যাংক</string>
    <string name="wallet_transfer">Wallet Transfer</string>
    <string name="wallet_transfer_history">Wallet Transfer History</string>
    <string name="fund_transfer_history">Fund Transfer History</string>
    <string name="wallet">Wallet</string>
    <string name="wallet_bangla">ওয়ালেট</string>
    <string name="binimoy_dashboard">Binimoy Dashboard</string>
    <string name="apply_loan">Apply Loan</string>
    <string name="loan_disburse">Loan Disburse</string>
    <string name="loan_dashboard">Loan Dashboard</string>
    <string name="loan_dashboard_new">Digital Nano Loan (DNL)</string>
    <string name="standing_ins_bangla">স্টান্ডিং ইন্সট্রাকশন্স</string>
    <string name="govt_fee_dashboard">Govt. Fee Dashboard</string>
    <string name="govt_fee_dashboard_bangla">সরকারি ফী ড্যাশবোর্ড</string>
    <string name="statement">Statement</string>
    <string name="home">Home</string>
    <string name="beneficiary">Beneficiary List</string>
    <string name="beneficiary_bottom">Beneficiary</string>
    <string name="menu">Menu</string>
    <string name="zero">0.00 BDT</string>
    <string name="_16205">16205</string>
    <string name="welcome_to">Welcome To</string>
    <string name="bank_asia_call_center">Bank Asia Call Center</string>
    <string name="you_are_able_to_call_this_number">You are able to call this number</string>
    <string name="_09617016205">09617016205</string>
    <string name="or_send_an_email_to">or send an email to</string>
    <string name="contact_center_bankasia_bd_com">contact.center@bankasia-bd.com</string>
    <string name="call_now">Call Now</string>
    <string name="download_voucher">Download Voucher</string>
    <string name="share_voucher">Share Voucher</string>
    <string name="account_no">Account No</string>
    <string name="particulars">Particulars</string>
    <string name="verify">Verify</string>
    <string name="add_account_to_beneficiary_list"><u>Add this account to beneficiary list</u></string>
    <string name="cheque_number">Cheque Number</string>
    <string name="qr_pay">QR Pay</string>
    <string name="ac_open_enter_otp_her_mobile">Enter OTP Here</string>
    <string name="ac_open_resend">Resend OTP</string>
</resources>