<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="eraapps.bankasia.bdinternetbanking.apps.presentation.welcome.dashboard.screen.dashboardfragment.Home"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/navigation_statement"
        android:name="eraapps.bankasia.bdinternetbanking.apps.presentation.welcome.dashboard.screen.dashboardfragment.Statement"
        android:label="@string/statement"
        tools:layout="@layout/fragment_statement" />

    <fragment
        android:id="@+id/navigation_beneficiary"
        android:name="eraapps.bankasia.bdinternetbanking.apps.presentation.welcome.dashboard.screen.dashboardfragment.Beneficiary"
        android:label="@string/beneficiary"
        tools:layout="@layout/fragment_beneficiary" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="eraapps.bankasia.bdinternetbanking.apps.presentation.welcome.dashboard.screen.dashboardfragment.Menu"
        android:label="@string/menu"
        tools:layout="@layout/fragment_menu" />


</navigation>