<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="25dp"
    android:background="@android:color/transparent"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="6dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="0dp">

                <ImageView
                    android:id="@+id/ivClose"
                    android:layout_width="@dimen/welcome_menu_icon_height_base"
                    android:layout_height="@dimen/welcome_menu_icon_height_base"
                    android:layout_gravity="right"
                    android:padding="@dimen/padding_2"
                    android:src="@drawable/ic_close" />

                <TextView
                    android:id="@+id/welcome_to"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="25dp"
                    android:gravity="center_horizontal"
                    android:padding="7dp"
                    android:text="@string/welcome_to"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/bank_asia_call_center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:padding="5dp"
                    android:text="@string/bank_asia_call_center"
                    android:textColor="@android:color/black"
                    android:textStyle="bold" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_15"
                    android:gravity="center"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/tv_call_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/you_are_able_to_call_this_number" />

                    <TextView
                        android:id="@+id/tv_call_action"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:gravity="center"
                        android:padding="@dimen/padding_5"
                        android:text="@string/_16205"
                        android:textColor="@color/app_color"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/tv_call_action_over"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_10"
                        android:gravity="center"
                        android:padding="@dimen/padding_5"
                        android:text="@string/_09617016205"
                        android:textColor="@color/app_color"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/or_send_an_email_to"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/or_send_an_email_to" />

                    <TextView
                        android:id="@+id/tv_mail_send"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        android:background="@drawable/btn_round_border_transparent_black"
                        android:gravity="center"
                        android:padding="@dimen/padding_15"
                        android:text="@string/contact_center_bankasia_bd_com"
                        android:textColor="@android:color/black"
                        android:textSize="14sp" />

                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_call"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/login_button_height"
                        android:layout_marginTop="@dimen/margin_10"
                        android:background="@drawable/bt_background_call_dalog"
                        android:baselineAlignBottom="true"
                        android:text="@string/call_now"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/textsize_base"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:baselineAlignBottom="false"
        android:src="@drawable/icon_call_center" />


</RelativeLayout>