<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/view_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">

        <TextView
            android:id="@+id/tv_cheque_number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/padding_2"
            android:paddingStart="@dimen/padding_5"
            android:text="@string/cheque_number"
            android:textColor="@color/black"
            android:textSize="@dimen/statement_textsize_base"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_account_no"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="@dimen/padding_2"
            android:text="@string/account_no"
            android:textColor="@color/black"
            android:textSize="@dimen/statement_textsize_base"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_trns_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="end"
            android:padding="@dimen/padding_2"
            android:paddingEnd="@dimen/padding_5"
            android:text="@string/amount"
            android:textColor="@color/black"
            android:textSize="@dimen/statement_textsize_base"
            android:textStyle="bold" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height_base"
        android:background="@color/confirm_divider_bg_color" />

</LinearLayout>