<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/view_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">

        <TextView
            android:id="@+id/tv_trns_date"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:gravity="center_vertical"
            android:padding="@dimen/padding_1"
            android:paddingStart="@dimen/padding_5"
            android:text="@string/date"
            android:textColor="@color/black"
            android:textSize="@dimen/statement_textsize_base" />

        <TextView
            android:id="@+id/tv_trns_particulars"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1.2"
            android:maxLines="2"
            android:padding="@dimen/padding_1"
            android:text="@string/particulars"
            android:textColor="@color/black"
            android:textSize="@dimen/statement_textsize_base" />

        <TextView
            android:id="@+id/tv_trns_amount"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.8"
            android:gravity="end|center"
            android:padding="@dimen/padding_1"
            android:paddingEnd="@dimen/padding_5"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:textSize="@dimen/statement_textsize_base" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="2.2"
            android:src="@drawable/icon_eye" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height_base"
        android:background="@color/confirm_divider_bg_color" />

</LinearLayout>