<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/voucher_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_download_voucher"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_download_height_base"
                android:layout_marginStart="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_weight="1"
                android:background="@drawable/btn_round_border_transparent_grey"
                android:padding="@dimen/padding_5"
                android:text="@string/download_voucher"
                android:textAllCaps="false"
                android:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_share"
                android:layout_width="match_parent"
                android:layout_height="@dimen/btn_download_height_base"
                android:layout_marginStart="@dimen/margin_5"
                android:layout_marginTop="@dimen/margin_20"
                android:layout_marginEnd="@dimen/margin_5"
                android:layout_marginBottom="@dimen/margin_10"
                android:layout_weight="1"
                android:background="@drawable/btn_round_border_transparent_grey"
                android:padding="@dimen/padding_5"
                android:text="@string/share_voucher"
                android:textAllCaps="false"
                android:textColor="@color/black" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_add_account_to_beneficiary_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_5"
            android:text="@string/add_account_to_beneficiary_list"
            android:textColor="@color/app_color"
            android:textSize="@dimen/textsize_base"
            android:textStyle="bold"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/btn_go_home"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_field_height_size"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/button_margin_left"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginEnd="@dimen/button_margin_right"
            android:layout_marginBottom="@dimen/margin_10"
            android:background="@drawable/bt_background_rounded_app_color"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/padding_5">

            <ImageView
                android:id="@+id/iv_home"
                android:layout_width="@dimen/home_icon_size_base"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:src="@drawable/icon_home_back" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_home"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="center"
                android:text="@string/home"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


</RelativeLayout>